--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   "author": "Your Name",
   "license": "ISC",
   "dependencies": {
+    "@google/generative-ai": "^0.15.0",
     "axios": "^1.7.2",
+    "bcrypt": "^5.1.1",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.20.2",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
